fixes board alignment on the right

--- a/styles/board.less
+++ b/styles/board.less
@@ -2,6 +2,7 @@
   display: inline-block;
   vertical-align: top;
   padding: 1rem;
+  float: right;
 
   td {
     width: 9rem;
@@ -19,7 +20,7 @@
 @media (max-width: 540px) {
   #board {
     width: 100%;
-    
+
     table {
       width: 100%;
     }
